ffigen/LabSoundHelper.h

void AudioParam_setValue(int nodeId, int paramIndex, float value);
float AudioParam_finalValue(int nodeId, int paramIndex, AudioContext* context);
void AudioParam_setValueCurveAtTime(int nodeId, int paramIndex, float curve[],float time,float duration);
void AudioParam_cancelScheduledValues(int nodeId, int paramIndex, float startTime);
void AudioParam_setValueAtTime(int nodeId, int paramIndex,float value,float time);
void AudioParam_exponentialRampToValueAtTime(int nodeId, int paramIndex,float value,float time);
void AudioParam_linearRampToValueAtTime(int nodeId, int paramIndex, float value,float time);
void AudioParam_setTargetAtTime(int nodeId, int paramIndex, float target, float time, float timeConstant);
float AudioParam_minValue(int nodeId, int paramIndex);
float AudioParam_maxValue(int nodeId, int paramIndex);
float AudioParam_defaultValue(int nodeId, int paramIndex);
void AudioParam_resetSmoothedValue(int nodeId, int paramIndex);
void AudioParam_setSmoothingConstant(int nodeId, int paramIndex, double k);
int AudioParam_hasSampleAccurateValues(int nodeId, int paramIndex);
/////////////////
/// AudioNode ///
/////////////////

void AudioNode_initialize(int nodeId);
void AudioNode_uninitialize(int nodeId);
int AudioNode_isScheduledNode(int nodeId);
int AudioNode_numberOfInputs(int nodeId);
int AudioNode_numberOfOutputs(int nodeId);
int AudioNode_channelCount(int nodeId);
void AudioNode_reset(int nodeId, AudioContext* context);
char * AudioNode_name(int nodeId);
int AudioNode_useCount(int nodeId);
void releaseNode(int nodeId);
int hasNode(int nodeId);
/// AudioScheduledSourceNode

int AudioScheduledSourceNode_isPlayingOrScheduled(int nodeId);
void AudioScheduledSourceNode_stop(int nodeId, float when);
int AudioScheduledSourceNode_hasFinished(int nodeId);