lib/tau_labs_bindings_generated.dart


  late final _AudioParam_setValuePtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.Float)>
  >('AudioParam_setValue');
  late final _AudioParam_setValue =
      _AudioParam_setValuePtr.asFunction<void Function(int, int, double)>();

  double AudioParam_finalValue(
    int nodeId,
    int paramIndex,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioParam_finalValue(nodeId, paramIndex, context);
  }

  late final _AudioParam_finalValuePtr = _lookup<
    ffi.NativeFunction<
      ffi.Float Function(ffi.Int, ffi.Int, ffi.Pointer<ffi.Void>)
    >
  >('AudioParam_finalValue');
  late final _AudioParam_finalValue =
      _AudioParam_finalValuePtr.asFunction<
        double Function(int, int, ffi.Pointer<ffi.Void>)
      >();

  void AudioParam_setValueCurveAtTime(
    int nodeId,
    int paramIndex,
    ffi.Pointer<ffi.Float> curve,
    double time,
    double duration,
  ) {
    return _AudioParam_setValueCurveAtTime(
      nodeId,
      paramIndex,
      curve,
      time,
      duration,
    );
  }

  late final _AudioParam_setValueCurveAtTimePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Int,
        ffi.Int,
        ffi.Pointer<ffi.Float>,
        ffi.Float,
        ffi.Float,
      )
    >
  >('AudioParam_setValueCurveAtTime');
  late final _AudioParam_setValueCurveAtTime =
      _AudioParam_setValueCurveAtTimePtr.asFunction<
        void Function(int, int, ffi.Pointer<ffi.Float>, double, double)
      >();

  void AudioParam_cancelScheduledValues(
    int nodeId,
    int paramIndex,
    double startTime,
  ) {
    return _AudioParam_cancelScheduledValues(nodeId, paramIndex, startTime);
  }

  late final _AudioParam_cancelScheduledValuesPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.Float)>
  >('AudioParam_cancelScheduledValues');
  late final _AudioParam_cancelScheduledValues =
      _AudioParam_cancelScheduledValuesPtr.asFunction<
        void Function(int, int, double)
      >();

  void AudioParam_setValueAtTime(
    int nodeId,
    int paramIndex,
    double value,
    double time,
  ) {
    return _AudioParam_setValueAtTime(nodeId, paramIndex, value, time);
  }

  late final _AudioParam_setValueAtTimePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Int, ffi.Float, ffi.Float)
    >
  >('AudioParam_setValueAtTime');
  late final _AudioParam_setValueAtTime =
      _AudioParam_setValueAtTimePtr.asFunction<
        void Function(int, int, double, double)
      >();

  void AudioParam_exponentialRampToValueAtTime(
    int nodeId,
    int paramIndex,
    double value,
    double time,
  ) {
    return _AudioParam_exponentialRampToValueAtTime(
      nodeId,
      paramIndex,
      value,
      time,
    );
  }

  late final _AudioParam_exponentialRampToValueAtTimePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Int, ffi.Float, ffi.Float)
    >
  >('AudioParam_exponentialRampToValueAtTime');
  late final _AudioParam_exponentialRampToValueAtTime =
      _AudioParam_exponentialRampToValueAtTimePtr.asFunction<
        void Function(int, int, double, double)
      >();

  void AudioParam_linearRampToValueAtTime(
    int nodeId,
    int paramIndex,
    double value,
    double time,
  ) {
    return _AudioParam_linearRampToValueAtTime(nodeId, paramIndex, value, time);
  }

  late final _AudioParam_linearRampToValueAtTimePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Int, ffi.Float, ffi.Float)
    >
  >('AudioParam_linearRampToValueAtTime');
  late final _AudioParam_linearRampToValueAtTime =
      _AudioParam_linearRampToValueAtTimePtr.asFunction<
        void Function(int, int, double, double)
      >();

  void AudioParam_setTargetAtTime(
    int nodeId,
    int paramIndex,
    double target,
    double time,
    double timeConstant,
  ) {
    return _AudioParam_setTargetAtTime(
      nodeId,
      paramIndex,
      target,
      time,
      timeConstant,
    );
  }

  late final _AudioParam_setTargetAtTimePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Int, ffi.Float, ffi.Float, ffi.Float)
    >
  >('AudioParam_setTargetAtTime');
  late final _AudioParam_setTargetAtTime =
      _AudioParam_setTargetAtTimePtr.asFunction<
        void Function(int, int, double, double, double)
      >();

  double AudioParam_minValue(int nodeId, int paramIndex) {
    return _AudioParam_minValue(nodeId, paramIndex);
  }

  late final _AudioParam_minValuePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int, ffi.Int)>>(
        'AudioParam_minValue',
      );
  late final _AudioParam_minValue =
      _AudioParam_minValuePtr.asFunction<double Function(int, int)>();

  double AudioParam_maxValue(int nodeId, int paramIndex) {
    return _AudioParam_maxValue(nodeId, paramIndex);
  }

  late final _AudioParam_maxValuePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int, ffi.Int)>>(
        'AudioParam_maxValue',
      );
  late final _AudioParam_maxValue =
      _AudioParam_maxValuePtr.asFunction<double Function(int, int)>();

  double AudioParam_defaultValue(int nodeId, int paramIndex) {
    return _AudioParam_defaultValue(nodeId, paramIndex);
  }

  late final _AudioParam_defaultValuePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int, ffi.Int)>>(
        'AudioParam_defaultValue',
      );
  late final _AudioParam_defaultValue =
      _AudioParam_defaultValuePtr.asFunction<double Function(int, int)>();

  void AudioParam_resetSmoothedValue(int nodeId, int paramIndex) {
    return _AudioParam_resetSmoothedValue(nodeId, paramIndex);
  }

  late final _AudioParam_resetSmoothedValuePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'AudioParam_resetSmoothedValue',
      );
  late final _AudioParam_resetSmoothedValue =
      _AudioParam_resetSmoothedValuePtr.asFunction<void Function(int, int)>();

  void AudioParam_setSmoothingConstant(int nodeId, int paramIndex, double k) {
    return _AudioParam_setSmoothingConstant(nodeId, paramIndex, k);
  }

  late final _AudioParam_setSmoothingConstantPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.Double)>
  >('AudioParam_setSmoothingConstant');
  late final _AudioParam_setSmoothingConstant =
      _AudioParam_setSmoothingConstantPtr.asFunction<
        void Function(int, int, double)
      >();

  int AudioParam_hasSampleAccurateValues(int nodeId, int paramIndex) {
    return _AudioParam_hasSampleAccurateValues(nodeId, paramIndex);
  }

  late final _AudioParam_hasSampleAccurateValuesPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
        'AudioParam_hasSampleAccurateValues',
      );
  late final _AudioParam_hasSampleAccurateValues =
      _AudioParam_hasSampleAccurateValuesPtr.asFunction<
        int Function(int, int)
      >();

  /// //////////////
  /// AudioNode ///
  /// //////////////
  void AudioNode_initialize(int nodeId) {
    return _AudioNode_initialize(nodeId);
  }

  late final _AudioNode_initializePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'AudioNode_initialize',
      );
  late final _AudioNode_initialize =
      _AudioNode_initializePtr.asFunction<void Function(int)>();

  void AudioNode_uninitialize(int nodeId) {
    return _AudioNode_uninitialize(nodeId);
  }

  late final _AudioNode_uninitializePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'AudioNode_uninitialize',
      );
  late final _AudioNode_uninitialize =
      _AudioNode_uninitializePtr.asFunction<void Function(int)>();

  int AudioNode_isScheduledNode(int nodeId) {
    return _AudioNode_isScheduledNode(nodeId);
  }

  late final _AudioNode_isScheduledNodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AudioNode_isScheduledNode',
      );
  late final _AudioNode_isScheduledNode =
      _AudioNode_isScheduledNodePtr.asFunction<int Function(int)>();

  int AudioNode_numberOfInputs(int nodeId) {
    return _AudioNode_numberOfInputs(nodeId);
  }

  late final _AudioNode_numberOfInputsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AudioNode_numberOfInputs',
      );
  late final _AudioNode_numberOfInputs =
      _AudioNode_numberOfInputsPtr.asFunction<int Function(int)>();

  int AudioNode_numberOfOutputs(int nodeId) {
    return _AudioNode_numberOfOutputs(nodeId);
  }

  late final _AudioNode_numberOfOutputsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AudioNode_numberOfOutputs',
      );
  late final _AudioNode_numberOfOutputs =
      _AudioNode_numberOfOutputsPtr.asFunction<int Function(int)>();

  int AudioNode_channelCount(int nodeId) {
    return _AudioNode_channelCount(nodeId);
  }

  late final _AudioNode_channelCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AudioNode_channelCount',
      );
  late final _AudioNode_channelCount =
      _AudioNode_channelCountPtr.asFunction<int Function(int)>();

  void AudioNode_reset(int nodeId, ffi.Pointer<ffi.Void> context) {
    return _AudioNode_reset(nodeId, context);
  }

  late final _AudioNode_resetPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Void>)>
  >('AudioNode_reset');
  late final _AudioNode_reset =
      _AudioNode_resetPtr.asFunction<
        void Function(int, ffi.Pointer<ffi.Void>)
      >();

  ffi.Pointer<ffi.Char> AudioNode_name(int nodeId) {
    return _AudioNode_name(nodeId);
  }

  late final _AudioNode_namePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int)>>(
        'AudioNode_name',
      );
  late final _AudioNode_name =
      _AudioNode_namePtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  int AudioNode_useCount(int nodeId) {
    return _AudioNode_useCount(nodeId);
  }

  late final _AudioNode_useCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AudioNode_useCount',
      );
  late final _AudioNode_useCount =
      _AudioNode_useCountPtr.asFunction<int Function(int)>();

  void releaseNode(int nodeId) {
    return _releaseNode(nodeId);
  }

  late final _releaseNodePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('releaseNode');
  late final _releaseNode = _releaseNodePtr.asFunction<void Function(int)>();

  int hasNode(int nodeId) {
    return _hasNode(nodeId);
  }

  late final _hasNodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('hasNode');
  late final _hasNode = _hasNodePtr.asFunction<int Function(int)>();

  /// AudioScheduledSourceNode
  int AudioScheduledSourceNode_isPlayingOrScheduled(int nodeId) {
    return _AudioScheduledSourceNode_isPlayingOrScheduled(nodeId);
  }

  late final _AudioScheduledSourceNode_isPlayingOrScheduledPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AudioScheduledSourceNode_isPlayingOrScheduled',
      );
  late final _AudioScheduledSourceNode_isPlayingOrScheduled =
      _AudioScheduledSourceNode_isPlayingOrScheduledPtr.asFunction<
        int Function(int)
      >();

  void AudioScheduledSourceNode_stop(int nodeId, double when) {
    return _AudioScheduledSourceNode_stop(nodeId, when);
  }

  late final _AudioScheduledSourceNode_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'AudioScheduledSourceNode_stop',
      );
  late final _AudioScheduledSourceNode_stop =
      _AudioScheduledSourceNode_stopPtr.asFunction<
        void Function(int, double)
      >();

  int AudioScheduledSourceNode_hasFinished(int nodeId) {
    return _AudioScheduledSourceNode_hasFinished(nodeId);
  }
